--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,11 @@ project(dauntless)
 
 include(GNUInstallDirs)
 
+add_subdirectory(include)
 add_subdirectory(lib)
 add_subdirectory(src)
 add_subdirectory(test)
+
+add_subdirectory(demo)
 
 install(FILES conf/dauntless.ini DESTINATION "${CMAKE_INSTALL_SYSCONFDIR}/dauntless")
