--- a/conf/dauntless.ini
+++ b/conf/dauntless.ini
@@ -8,10 +8,10 @@ port = 1883;
 
 [login]
 
-anonymously = FALSE;
+anonymously = TRUE;
 
 control_type = test;
 
 [control]
 
-dir = ./control/libtestextend.so;
+dir = /home/wmwyt/Documents/dauntless/build/demo/test/libtest.so;
