--- a/plugin/test/CMakeLists.txt
+++ b/plugin/test/CMakeLists.txt
@@ -1,8 +1,8 @@
 include_directories(${dauntless_SOURCE_DIR} 
                     ${dauntless_SOURCE_DIR}/src
                     ${dauntless_SOURCE_DIR}/include
-                    ${dauntless_SOURCE_DIR}/lib)
+)
 
-set(LIB ../../lib/dauntless.c)
+# set(LIB ../../lib/dauntless.c)
 
 add_library(test SHARED test.c ${LIB})
