--- a/conf/dauntless.ini
+++ b/conf/dauntless.ini
@@ -1,14 +1,16 @@
 [test]
 
-hello = cao;
+hello = world;
 
 [info]
 
 port = 1883;
 
+tls = true;
+
 [login]
 
-anonymously = TRUE;
+anonymously = false;
 
 control_type = test;
 
