--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,2 +1,2 @@
-install(FILES ../include/dauntless.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-install(FILES ../include/mqtt.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+install(FILES ../include/dauntless_mqtt.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
+install(FILES ../include/dauntless_plugin.h DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
