--- a/conf/dauntless.ini
+++ b/conf/dauntless.ini
@@ -1,13 +1,11 @@
-[test]
-
-hello = world;
-
 [info]
-
 port = 1883;
 
 tls = false;
 
+key = /home/wmwyt/Documents/dauntless/doc/key.pem;
+
+cert = /home/wmwyt/Documents/dauntless/doc/cert.pem;
 [login]
 
 anonymously = false;
