add publish plug-in

--- a/conf/dauntless.ini
+++ b/conf/dauntless.ini
@@ -8,7 +8,7 @@ key = /home/wmwyt/Documents/dauntless/doc/key.pem;
 cert = /home/wmwyt/Documents/dauntless/doc/cert.pem;
 [login]
 
-anonymously = true;
+anonymously = false;
 
 control_type = test;
 
