--- a/conf/dauntless.ini
+++ b/conf/dauntless.ini
@@ -1,11 +1,19 @@
 [info]
+
 port = 1883;
 
 tls = false;
 
-key = /home/wmwyt/Documents/dauntless/doc/key.pem;
+key = key.pem;
 
-cert = /home/wmwyt/Documents/dauntless/doc/cert.pem;
+cert = cert.pem;
+
+[log]
+
+log = false
+
+log_file = log.txt
+
 [login]
 
 anonymously = false;
@@ -14,4 +22,4 @@ control_type = test;
 
 [control]
 
-dir = /home/wmwyt/Documents/dauntless/build/plugin/test/libtest.so;
+dir = libtest.so;
