--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ include_directories(${dauntless_SOURCE_DIR}
                     ${dauntless_SOURCE_DIR}/src
                     ${dauntless_SOURCE_DIR}/include
                     ${dauntless_SOURCE_DIR}/3rd/uthash
+                    ${dauntless_SOURCE_DIR}/3rd/log.c
                     ${dauntless_SOURCE_DIR}/3rd/iniparser)
 
 file(GLOB D_SOURCES *.c)
@@ -11,6 +12,7 @@ find_package(OpenSSL REQUIRED)
 set(LIB_SRC 
     ../3rd/iniparser/iniparser.c
     ../3rd/iniparser/dictionary.c
+    ../3rd/log.c/log.c
 )
 
 add_executable(dauntless ${D_SOURCES} ${LIB_SRC})
